--- a/styles.css
+++ b/styles.css
@@ -8,10 +8,16 @@ table {
   position: relative;
 }
 
+td {
+  width: 1.3em;
+  height: 1.3em;
+  border: 1px solid #333333;
+}
+
 .heroTile {
   color: orangered;
   position: absolute;
   font-weight: bold;
-  left: 20px;
-  top: 26px;
+  left: 5em;
+  top: 3.4em;
 }
